--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,10 @@
-<h1>New Game</h1>
+<div class="banner">
+  <div class="brown">
+    <div class="back">
+      <h1>Countdown</h1>
+    </div>
+  </div>
+</div>
 <div class="container">
   <% @letters.each do |letter|%>
   <div class="letter"><h1><%= letter %></h1></div>
